# ShellPilot

./: .gitignore  README.md  pyproject.toml  requirements-web.txt  requirements.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
myenv/: pyvenv.cfg
shellpilot/: __init__.py  config.py  main.py
shellpilot/core/: __init__.py  executor.py  llm.py  safety.py  session.py  workflow.py
shellpilot/providers/: __init__.py  deepseek.py
shellpilot/web/: __init__.py  main.py
shellpilot/web/api/: __init__.py  commands.py  models.py  session.py  workflows.py
